--- a/ansible.yml
+++ b/ansible.yml
@@ -1,7 +1,11 @@
-- hosts: all
-  become: true
-  tasks: 
+ - hosts: all
+   become: true
+   tasks: 
+     - name: delete old deployment
+       command: kubectl delete -f /home/ubuntu/Deployment.yml
+     - name: delete old service
+       command: kubectl delete -f /home/ubuntu/Service.yml
      - name: create new deployment
-      shell: kubectl apply -f /home/ubuntu/Deployment.yml
+       command: kubectl apply -f /home/ubuntu/Deployment.yml
      - name: create new service
-       shell: kubectl apply -f /home/ubuntu/Service.yml
+       command: kubectl apply -f /home/ubuntu/Service.yml
