--- a/ansible.yml
+++ b/ansible.yml
@@ -1,11 +1,8 @@
- - hosts: all
-   become: true
-   tasks: 
-     - name: delete old deployment
-       command: kubectl delete -f /home/ubuntu/Deployment.yml
-     - name: delete old service
-       command: kubectl delete -f /home/ubuntu/Service.yml
-     - name: create new deployment
-       command: kubectl apply -f /home/ubuntu/Deployment.yml
-     - name: create new service
-       command: kubectl apply -f /home/ubuntu/Service.yml
+---
+- name: Apply Kubernetes Deployment
+  hosts: all
+  tasks:
+    - name: Run kubectl apply command
+      shell:
+        cmd: kubectl apply -f /home/ubuntu/Deployment.yml;kubectl apply -f /home/ubuntu/Service.yml
+        executable: /bin/bash
