--- a/ansible.yml
+++ b/ansible.yml
@@ -4,5 +4,5 @@
   tasks:
     - name: Run kubectl apply command
       shell:
-        cmd: kubectl apply -f /home/ubuntu/Deployment.yml;kubectl apply -f /home/ubuntu/Service.yml
+        cmd: kubectl delete -f /home/ubuntu/Deployment.yml;kubectl delete -f /home/ubuntu/Service.yml;kubectl apply -f /home/ubuntu/Deployment.yml;kubectl apply -f /home/ubuntu/Service.yml
         executable: /bin/bash
